--- a/sample/Dockerfile
+++ b/sample/Dockerfile
@@ -1,6 +1,6 @@
-#This challange uses ssh to give users a vim shell. Build the sshd image first with docker build -t sshd ..
+#This challenge uses ssh to give users a vim shell. Build the sshd image first with docker build -t sshd ..
 
-FROM ctf-sshd
+FROM ghcr.io/gartnera/ctf-sshd
 
 #RUN sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
